--- a/css/calculator.css
+++ b/css/calculator.css
@@ -22,3 +22,15 @@
     margin: 5px;
     font-size: 30px;
 }
+
+.btn-default {
+    width: 60px;
+    height: 60px;
+    margin: 5px;
+}
+
+.container {
+    width: 600px;
+    height: auto;
+    border-color: red;
+}
