--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -8,9 +8,10 @@ body {
     margin: 5px;
 }
 
-.col-sm-6, .col-sm-4 {
+.col-sm-6, .col-sm-3 {
     border-color: red;
     border-width: 3px;
+    padding: 5px;
 }
 
 #map-canvas {
@@ -23,4 +24,49 @@ body {
 
 #latitude, #longitude {
     text-align: right;
+}
+
+.controls {
+    margin-top: 10px;
+    border: 1px solid transparent;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 32px;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#pac-input {
+    background-color: #fff;
+    /*font-family: Roboto;*/
+    /*font-size: 15px;*/
+    /*font-weight: 300;*/
+    margin-left: 12px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 300px;
+}
+
+#pac-input:focus {
+    border-color: #4d90fe;
+}
+
+/*.pac-container {*/
+    /*font-family: Roboto;*/
+/*}*/
+
+#type-selector {
+    color: #fff;
+    background-color: #4d90fe;
+    padding: 5px 11px 0 11px;
+}
+
+/*#type-selector label {*/
+    /*font-family: Roboto;*/
+    /*font-size: 13px;*/
+    /*font-weight: 300;*/
+/*}*/
+#target {
+    width: 345px;
 }
